# phonto

./: CONTRIBUTING.md  Cargo.toml  HANDOFF_PLAN.md  README.md  flake.nix  livewallpaper  logs  phonto  phonto-updated  t.py  t.swift  wallspace
.github/workflows/: ci.yml  release.yml
screensaver/: Cargo.toml  Info.plist  build-saver.sh
screensaver/.cargo/: config.toml
screensaver/Phonto.saver/Contents/MacOS/: PhontoScreenSaver
screensaver/Phonto.saver/Contents/_CodeSignature/: CodeResources
screensaver/src/: lib.rs
scripts/: capture-lock-cycle-logs.sh  diff-hvcc.py  diff-wallper-vs-ours.sh  inject-entries.py  inspect-bitdepth.swift  install-candidate-mov.sh  patch-level-idc.py  probe-wallper-lockcache.sh  strip-color-atoms.py  test-wallper-shape.sh  trace-wallper-vt.lldb  trace-wallper-vt.sh  transcode-hevc-export.swift  transcode-hevc-main10.swift  transcode-hevc-temporal.swift  vt_trace.py
src/: cache.rs  config.rs  decoder.rs  displays.rs  gl_renderer.rs  main.rs  phonto.rs  plan.rs  scale.rs  wallpaper.rs  wayland.rs
src/backend/: mod.rs
src/backend/macos/: battery_observer.rs  displays.rs  loop_observer.rs  mod.rs  screen_observer.rs  shuffle_observer.rs
src/backend/wayland/: battery_observer.rs  decoder.rs  displays.rs  gl_renderer.rs  mod.rs
src/macos_live_lockscreen/: install.rs  mod.rs  transcode.rs
wallpaper-injector/: Cargo.toml
wallpaper-injector/src/: main.rs
