[package]
name = "phonto"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "GPU-accelerated video wallpaper program for wayland compositors & MacOS"
repository = "https://github.com/museslabs/phonto"
homepage = "https://github.com/museslabs/phonto"
readme = "README.md"
keywords = ["wayland",  "macos", "wallpaper", "gpu"]
categories = ["multimedia"]
exclude = ["example.gif", "target/*", "nix/*", "flake.*", "shell.nix", "install.sh", "todo.md", "CLAUDE.md", ".github/*", ".claude/*"]

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
glow = "0.17.0"
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
gstreamer-gl = "0.24"
gstreamer-gl-egl = "0.24"
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
glutin = "0.32.3"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSRunLoop",
    "NSObjCRuntime",
    "NSNotification",
    "NSString",
    "NSURL",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-quartz-core",
    "objc2-core-foundation",
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSScreen",
    "NSColor",
    "NSGraphics",
    "NSEvent",
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
objc2-core-foundation = "0.3"
objc2-av-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-media",
    "objc2-quartz-core",
    "AVPlayer",
    "AVPlayerItem",
    "AVPlayerLayer",
    "AVAsset",
    "AVAnimation",
] }
objc2-core-media = { version = "0.3", default-features = false, features = [
    "std",
    "CMTime",
] }
